--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
 .App {
-  text-align: center;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgb(36, 29, 29);
+	color: rgb(103, 103, 222);
+
+	display: flex;
+	flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.light {
+	background-color: rgb(36, 29, 29);
+	color: rgb(103, 103, 222);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dark {
+	background-color: whitesmoke;
+	color: rgb(36, 29, 29);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.introText {
+	flex-grow: 1;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mode {
+	flex-grow: 1;
+	align-self: flex-end;
+	margin-right: 2em;
+	margin-top: 2em;
 }
