--- a/src/components/mode/ModeBtn.css
+++ b/src/components/mode/ModeBtn.css
@@ -12,13 +12,13 @@ button {
 	padding-left: 8;
 }
 
-button.Dark {
+button.dark {
 	border: 4px solid rgb(36, 29, 29);
 	background-color: whitesmoke;
 	color: rgb(36, 29, 29);
 }
 
-button.Light {
+button.light {
 	border: 4px solid whitesmoke;
 	background-color: rgb(36, 29, 29);
 	color: whitesmoke;
